# aido

./: Cargo.toml  README.md  justfile
sample-recipes/: commit.recipe  do.recipe  shell.recipe
src/: cli.rs  config.rs  llm.rs  main.rs  recipe.rs  run.rs  tools.rs  tools2.rs
src/tools/: ls.rs
