[package]
name = "aido"
version = "0.1.0"
edition = "2024"
authors = ["Andy Salerno <andysalerno@gmail.com>"]
description = "Do things with AI in your terminal"
license = "MIT"
homepage = "https://github.com/andysalerno/aido"
repository = "https://github.com/andysalerno/aido"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
confy = "1.0"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
async-openai = "0.28.2"

[lints.rust]
let-underscore = "warn"
future-incompatible = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"
rust-2018-idioms = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"

